RESOLVED FIXED203809
REGRESSION(r243947) Epson software updater fails to install new version
https://bugs.webkit.org/show_bug.cgi?id=203809
Summary REGRESSION(r243947) Epson software updater fails to install new version
Alex Christensen
Reported 2019-11-04 06:37:04 PST
REGRESSION(r243947) Epson software updater fails to install new version
Attachments
Patch (9.23 KB, patch)
2019-11-04 06:38 PST, Alex Christensen
no flags
Patch (9.30 KB, patch)
2019-11-04 08:48 PST, Alex Christensen
no flags
Patch (9.48 KB, patch)
2019-11-04 09:33 PST, Alex Christensen
no flags
Alex Christensen
Comment 1 2019-11-04 06:38:35 PST
Alex Christensen
Comment 2 2019-11-04 06:38:40 PST
Alex Christensen
Comment 3 2019-11-04 08:48:38 PST
Brady Eidson
Comment 4 2019-11-04 09:01:31 PST
Comment on attachment 382742 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=382742&action=review > Source/WebKitLegacy/mac/Misc/WebDownload.mm:122 > + if (isDelegateThread()) Is there any reason we even have "isDelegateThread"? Couldn't we just always use "callOnDelegateThread"? Even the forms of this that need a sync return value should be able to work with that, right?
Alex Christensen
Comment 5 2019-11-04 09:19:02 PST
Comment on attachment 382742 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=382742&action=review >> Source/WebKitLegacy/mac/Misc/WebDownload.mm:122 >> + if (isDelegateThread()) > > Is there any reason we even have "isDelegateThread"? > > Couldn't we just always use "callOnDelegateThread"? > > Even the forms of this that need a sync return value should be able to work with that, right? We would need callOnDelegateThread and callOnDelegateThreadAndWait. Do you think that would be better?
Brady Eidson
Comment 6 2019-11-04 09:23:27 PST
(In reply to Alex Christensen from comment #5) > Comment on attachment 382742 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=382742&action=review > > >> Source/WebKitLegacy/mac/Misc/WebDownload.mm:122 > >> + if (isDelegateThread()) > > > > Is there any reason we even have "isDelegateThread"? > > > > Couldn't we just always use "callOnDelegateThread"? > > > > Even the forms of this that need a sync return value should be able to work with that, right? > > We would need callOnDelegateThread and callOnDelegateThreadAndWait. Do you > think that would be better? Oh, I was (incorrectly) thinking the sync behavior was managed through a local variable of some sort. I think it'd be better. It would clean up every single call site into two methods with the complexity.
Alex Christensen
Comment 7 2019-11-04 09:33:50 PST
Brady Eidson
Comment 8 2019-11-04 09:34:49 PST
Comment on attachment 382746 [details] Patch I think this is much better.
WebKit Commit Bot
Comment 9 2019-11-04 10:21:03 PST
Comment on attachment 382746 [details] Patch Clearing flags on attachment: 382746 Committed r252000: <https://trac.webkit.org/changeset/252000>
WebKit Commit Bot
Comment 10 2019-11-04 10:21:05 PST
All reviewed patches have been landed. Closing bug.
Geoffrey Garen
Comment 11 2019-11-04 10:59:54 PST
Comment on attachment 382746 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=382746&action=review > Source/WebKitLegacy/mac/Misc/WebDownload.mm:50 > + static bool isOldEpsonSoftwareUpdater = WebCore::MacApplication::isEpsonSoftwareUpdater() && dyld_get_program_sdk_version() < DYLD_MACOSX_VERSION_10_15; > + return isOldEpsonSoftwareUpdater; Even though this is LegacyWebKit code, which technically works with dyld_get_program_sdk_version(), it's better style to use applicationSDKVersion(), which works for LegacyWebKit and WebKit.
Note You need to log in before you can comment on or make changes to this bug.